--- a/data/benefits/javascript/region-auvergne-rhone-alpes-ter-illico-solidaire.yml
+++ b/data/benefits/javascript/region-auvergne-rhone-alpes-ter-illico-solidaire.yml
@@ -4,7 +4,7 @@ description: Grâce à la carte gratuite TER Illico Solidaire, bénéficiez pend
   1 an de 75% de réduction sur les billets TER tarif normal en
   Auvergne-Rhône-Alpes.
 conditions:
-  - "Être dans l'une des situations suivantes : inscrit ou inscrite à Pôle Emploi (indemnisé
+  - "Être dans l'une des situations suivantes : inscrit ou inscrite à France travail (indemnisé
     en dessous du SMIC ou non indemnisé) ; avoir moins de 26 ans et être
     inscrit ou inscrite en mission locale et participer à un dispositif régional ou
     national de formation ou d’accompagnement renforcé ; être titulaire d’un
