--- a/data/benefits/javascript/metropole-lyon-aide-covoiturage.yml
+++ b/data/benefits/javascript/metropole-lyon-aide-covoiturage.yml
@@ -1,6 +1,7 @@
 label: Incitation au covoiturage
 institution: intercommunalite_metropole_lyon
-description: Pour encourager le covoiturage, la Métropole de Lyon subventionne tous vos trajets
+description:
+  Pour encourager le covoiturage, la Métropole de Lyon subventionne tous vos trajets
   réservés depuis son application web et mobile En Covoit’Grand Lyon, que vous soyez conducteur
   ou passager. Gain pour le conducteur ":" entre 1 et 8 euros par passager, en fonction de la longueur du trajet.
   Coût pour le passager ":" 10 centimes par kilomètre.
