Corrige le prefix

--- a/data/benefits/javascript/aide-demonstration-rdv-service-public.yml
+++ b/data/benefits/javascript/aide-demonstration-rdv-service-public.yml
@@ -4,7 +4,7 @@ description:
   Vous avez besoin d'aide pour comprendre votre résultat de simulation
   et effectuer vos démarches ? Prenez un rendez-vous pour être rappelé au téléphone
   par le Centre Communal d’Action Sociale de Beaumont-en-Verdunois.
-prefix: le
+prefix: l’
 conditions_generales:
   - type: communes
     values:
