--- a/data/benefits/javascript/aide-demonstration-rdv-service-public.yml
+++ b/data/benefits/javascript/aide-demonstration-rdv-service-public.yml
@@ -1,5 +1,5 @@
 label: aide de démonstration de la prise de rendez-vous téléphonique d'accompagnement
-institution: état
+institution: etat
 description:
   Vous avez besoin d'aide pour comprendre votre résultat de simulation
   et effectuer vos démarches ? Prenez un rendez-vous pour être rappelé au téléphone
