--- a/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
+++ b/data/benefits/javascript/caf_haute_garonne-aide-complémentaire-au-bafa-handicap.yml
@@ -1,3 +1,4 @@
+
 label: Aide complémentaire au BAFA Handicap
 institution: caf_haute_garonne
 description: La Caf de la Haute-Garonne propose une aide complémentaire BAFA
@@ -31,5 +32,6 @@ unit: €
 periodicite: autre
 legend: maximum
 montant: 230
-link: https://fr.calameo.com/read/003857823acdee8c8d857?page=14
-teleservice: https://connect.caf.fr/creationcompteappli/dist/?forceReload=20211220&contexteAppel=caffr&urlredirect=%2Fredirect%2Fs%2FRedirect%3Fpage%3DmonCompteFormulaires%26prestaDemandee%3DDBAFA&contexteDemandePrestation=true#/pageintermediaire
+link: https://www.caf.fr/allocataires/caf-de-la-haute-garonne/actualites-departementales/devenir-animateur-vous-tente-la-caf-vous-aide-financer-votre-bafa
+form: https://www.calameo.com/read/003857823386e1cb70e9e
+private: true
