Cache le Pass engagement du département des cotes d'armor. Ce dispositif n'est plus communiqué en ligne.

--- a/data/benefits/javascript/departement_cotes_d_armor-aide-departementale-au-permis-de-conduire-passengagement.yml
+++ b/data/benefits/javascript/departement_cotes_d_armor-aide-departementale-au-permis-de-conduire-passengagement.yml
@@ -31,3 +31,4 @@ legend: maximum
 montant: 1200
 link: https://cotesdarmor.fr/pass-engagement
 form: https://cotesdarmor.fr/sites/default/files/2023-03/PassEngagement_Dossier_candidature_attestations_autorisation_23_BATWeb_0.pdf
+private: true
