--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "Simulateur de prestations sociales pour les jeunes",
   "type": "module",
   "scripts": {
-    "serve": "nodemon --exec 'ts-node backend/dev'",
+    "serve": "nodemon --exec 'tsx backend/dev'",
     "build": "concurrently 'npm run build:server' && concurrently 'npm run build:iframes' 'npm run build:front' && npm run copy:templates",
     "clean:dist-server": "rm -fR dist-server",
     "copy:templates": "mkdir -p dist-server/backend/lib/mes-aides/emails/templates && cp backend/lib/mes-aides/emails/templates/* dist-server/backend/lib/mes-aides/emails/templates",
-    "build:iframes": "NODE_OPTIONS='--loader ts-node/esm' webpack --config iframes/iframes.config.ts",
+    "build:iframes": "NODE_OPTIONS='--import tsx/esm' webpack --config iframes/iframes.config.ts",
     "build:front": "vite build",
     "build:server": "tsc -p tsconfig.server.json",
     "preview": "vite preview",
@@ -28,27 +28,27 @@
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "start": "NODE_ENV=production node ./dist-server/backend/server.js",
-    "stats": "ts-node ./backend/lib/stats",
+    "stats": "tsx ./backend/lib/stats",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_PATH=. jest --testTimeout=20000",
-    "tools:check-links-validity": "ts-node ./tools/check-links-validity.ts",
-    "tools:cleaner": "ts-node ./tools/cleaner.ts",
-    "tools:create-temp-smtp-server": "ts-node ./tools/create-temp-smtp-server",
-    "tools:evaluate-benefits": "ts-node ./tools/evaluate-benefits",
-    "tools:generate-missing-institutions-aides-velo": "ts-node ./tools/generate-missing-institutions-aides-velo",
-    "tools:generate-mongo-stats": "ts-node ./tools/mongo-query.ts",
-    "tools:geographical-benefits-details": "ts-node ./tools/geographical-benefits-details",
-    "tools:get-all-steps": "ts-node ./tools/get-all-steps",
-    "tools:get-latest-simulation-ids": "ts-node ./tools/get-latest-simulation-ids",
-    "tools:institutions-logo-check": "ts-node ./tools/institutions-logo-check",
-    "tools:serve-mail": "ts-node ./tools/mjml",
-    "tools:send-summary-email": "ts-node ./tools/email-summary-tool",
-    "tools:send-survey-email": "ts-node ./tools/email-sending-tool send simulation-usefulness",
-    "tools:send-initial-survey-email": "ts-node ./tools/email-sending-tool send initial-survey --multiple 1000",
-    "tools:send-initial-survey-sms": "ts-node ./tools/sms-sending-tool send initial-survey --multiple 2",
-    "tools:test-benefits-geographical-constraint-consistency": "ts-node ./tools/test-benefits-geographical-constraint-consistency",
-    "tools:test-definition-periods": "ts-node ./tools/test-definition-periods",
+    "tools:check-links-validity": "tsx ./tools/check-links-validity.ts",
+    "tools:cleaner": "tsx ./tools/cleaner.ts",
+    "tools:create-temp-smtp-server": "tsx ./tools/create-temp-smtp-server",
+    "tools:evaluate-benefits": "tsx ./tools/evaluate-benefits",
+    "tools:generate-missing-institutions-aides-velo": "tsx ./tools/generate-missing-institutions-aides-velo",
+    "tools:generate-mongo-stats": "tsx ./tools/mongo-query.ts",
+    "tools:geographical-benefits-details": "tsx ./tools/geographical-benefits-details",
+    "tools:get-all-steps": "tsx ./tools/get-all-steps",
+    "tools:get-latest-simulation-ids": "tsx ./tools/get-latest-simulation-ids",
+    "tools:institutions-logo-check": "tsx ./tools/institutions-logo-check",
+    "tools:serve-mail": "tsx ./tools/mjml",
+    "tools:send-summary-email": "tsx ./tools/email-summary-tool",
+    "tools:send-survey-email": "tsx ./tools/email-sending-tool send simulation-usefulness",
+    "tools:send-initial-survey-email": "tsx ./tools/email-sending-tool send initial-survey --multiple 1000",
+    "tools:send-initial-survey-sms": "tsx ./tools/sms-sending-tool send initial-survey --multiple 2",
+    "tools:test-benefits-geographical-constraint-consistency": "tsx ./tools/test-benefits-geographical-constraint-consistency",
+    "tools:test-definition-periods": "tsx ./tools/test-definition-periods",
     "tools:test-iframe-generation": "./tools/iframe-build-control.sh",
-    "migrate": "ts-node ./backend/lib/migrations/apply.ts --all"
+    "migrate": "tsx ./backend/lib/migrations/apply.ts --all"
   },
   "dependencies": {
     "@etalab/decoupage-administratif": "^3.0.0",
@@ -133,6 +133,7 @@
     "rollup-plugin-visualizer": "^5.8.2",
     "smtp-tester": "^2.0.1",
     "ts-jest": "^29.1.0",
+    "tsx": "^4.7.1",
     "typescript": "^5.1.6",
     "webpack": "^5.78.0",
     "webpack-bundle-analyzer": "^4.5.0"
