Utilise une configuration de ts-node compatible avec node v18 (#4221)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simulateur de prestations sociales pour les jeunes",
   "type": "module",
   "scripts": {
-    "serve": "nodemon --exec 'ts-node backend/dev'",
+    "serve": "nodemon --exec 'node --loader ts-node/esm backend/dev.ts'",
     "build": "concurrently 'npm run build:server' && concurrently 'npm run build:iframes' 'npm run build:front' && npm run copy:templates",
     "clean:dist-server": "rm -fR dist-server",
     "copy:templates": "mkdir -p dist-server/backend/lib/mes-aides/emails/templates && cp backend/lib/mes-aides/emails/templates/* dist-server/backend/lib/mes-aides/emails/templates",
@@ -28,27 +28,27 @@
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
     "start": "NODE_ENV=production node ./dist-server/backend/server.js",
-    "stats": "ts-node ./backend/lib/stats",
+    "stats": "node --loader ts-node/esm ./backend/lib/stats/index.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_PATH=. jest --testTimeout=20000",
-    "tools:check-links-validity": "ts-node ./tools/check-links-validity.ts",
-    "tools:cleaner": "ts-node ./tools/cleaner.ts",
-    "tools:create-temp-smtp-server": "ts-node ./tools/create-temp-smtp-server",
-    "tools:evaluate-benefits": "ts-node ./tools/evaluate-benefits",
-    "tools:generate-missing-institutions-aides-velo": "ts-node ./tools/generate-missing-institutions-aides-velo",
-    "tools:generate-mongo-stats": "ts-node ./tools/mongo-query.ts",
-    "tools:geographical-benefits-details": "ts-node ./tools/geographical-benefits-details",
-    "tools:get-all-steps": "ts-node ./tools/get-all-steps",
-    "tools:get-latest-simulation-ids": "ts-node ./tools/get-latest-simulation-ids",
-    "tools:institutions-logo-check": "ts-node ./tools/institutions-logo-check",
-    "tools:serve-mail": "ts-node ./tools/mjml",
-    "tools:send-summary-email": "ts-node ./tools/email-summary-tool",
-    "tools:send-survey-email": "ts-node ./tools/email-sending-tool send simulation-usefulness",
-    "tools:send-initial-survey-email": "ts-node ./tools/email-sending-tool send initial-survey --multiple 1000",
-    "tools:send-initial-survey-sms": "ts-node ./tools/sms-sending-tool send initial-survey --multiple 2",
-    "tools:test-benefits-geographical-constraint-consistency": "ts-node ./tools/test-benefits-geographical-constraint-consistency",
-    "tools:test-definition-periods": "ts-node ./tools/test-definition-periods",
+    "tools:check-links-validity": "node --loader ts-node/esm ./tools/check-links-validity.ts",
+    "tools:cleaner": "node --loader ts-node/esm ./tools/cleaner.ts",
+    "tools:create-temp-smtp-server": "node --loader ts-node/esm ./tools/create-temp-smtp-server.ts",
+    "tools:evaluate-benefits": "node --loader ts-node/esm ./tools/evaluate-benefits",
+    "tools:generate-missing-institutions-aides-velo": "node --loader ts-node/esm ./tools/generate-missing-institutions-aides-velo",
+    "tools:generate-mongo-stats": "node --loader ts-node/esm ./tools/mongo-query.ts",
+    "tools:geographical-benefits-details": "node --loader ts-node/esm ./tools/geographical-benefits-details",
+    "tools:get-all-steps": "node --loader ts-node/esm ./tools/get-all-steps",
+    "tools:get-latest-simulation-ids": "node --loader ts-node/esm ./tools/get-latest-simulation-ids",
+    "tools:institutions-logo-check": "node --loader ts-node/esm ./tools/institutions-logo-check",
+    "tools:serve-mail": "node --loader ts-node/esm ./tools/mjml",
+    "tools:send-summary-email": "node --loader ts-node/esm ./tools/email-summary-tool",
+    "tools:send-survey-email": "node --loader ts-node/esm ./tools/email-sending-tool send simulation-usefulness",
+    "tools:send-initial-survey-email": "node --loader ts-node/esm ./tools/email-sending-tool send initial-survey --multiple 1000",
+    "tools:send-initial-survey-sms": "node --loader ts-node/esm ./tools/sms-sending-tool send initial-survey --multiple 2",
+    "tools:test-benefits-geographical-constraint-consistency": "node --loader ts-node/esm ./tools/test-benefits-geographical-constraint-consistency",
+    "tools:test-definition-periods": "node --loader ts-node/esm ./tools/test-definition-periods",
     "tools:test-iframe-generation": "./tools/iframe-build-control.sh",
-    "migrate": "ts-node ./backend/lib/migrations/apply.ts --all"
+    "migrate": "node --loader ts-node/esm ./backend/lib/migrations/apply.ts --all"
   },
   "dependencies": {
     "@etalab/decoupage-administratif": "^3.0.0",
