Met à jour le lien d'instruction concernant l'abonnement TER Breizhgo

--- a/data/benefits/javascript/region-bretagne-abonnement-breizhgo.yml
+++ b/data/benefits/javascript/region-bretagne-abonnement-breizhgo.yml
@@ -18,4 +18,4 @@ type: bool
 unit: €
 periodicite: autre
 link: https://www.ter.sncf.com/bretagne/abonnements/tous-les-abonnements/abonnements-ter-tgv-reseaux-urbains
-instructions: https://www.ter.sncf.com/bretagne/se-deplacer/comparateur-tarifs
+instructions: https://www.breizhgo.bzh/faq/question/comment-souscrire-un-abonnement-ter-breizhgo
