--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "mongoose": "^6.11.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.3",
+    "openid-client": "^5.6.5",
     "pinia": "^2.0.16",
     "tmp": "^0.2.1",
     "ts-node": "^10.9.1",
