--- a/data/benefits/javascript/region-ile-de-france-vehicules-propres.yml
+++ b/data/benefits/javascript/region-ile-de-france-vehicules-propres.yml
@@ -1,15 +1,15 @@
 label: aide à la transformation de véhicules thermiques en véhicules propres
 institution: region_ile_de_france
 description: La Région subventionne le rétrofit des véhicules thermiques des particuliers.
-  Moins onéreux que l’achat d’une voiture neuve à faibles émissions, le rétrofit consiste
-  à extraire la mécanique d’origine d’un véhicule thermique pour les remplacer
+  Moins onéreux que l'achat d'une voiture neuve à faibles émissions, le rétrofit consiste
+  à extraire la mécanique d'origine d'un véhicule thermique pour les remplacer
   par un moteur électrique, une batterie et un boîtier électronique. Tous les véhicules motorisés
-  sont éligibles (scooters, voitures, camionnettes...) à condition qu’ils appartiennent
+  sont éligibles (scooters, voitures, camionnettes...) à condition qu'ils appartiennent
   à leurs bénéficiaires depuis plus de 1 an.
 conditions:
-  - Être propriétaire du véhicule qui fera l’objet du rétrofit.
+  - Être propriétaire du véhicule qui fera l'objet du rétrofit.
   - Faire réaliser le rétrofit chez un professionnl agréé.
-  - Déposer votre demande d’aide sur mesdemarches.iledefrance.fr dans les trois mois suivant le rétrofit du véhicule.
+  - Déposer votre demande d'aide sur mesdemarches.iledefrance.fr dans les trois mois suivant le rétrofit du véhicule.
 conditions_generales:
   - type: regions
     values:
@@ -17,7 +17,7 @@ conditions_generales:
 profils: []
 link: https://www.iledefrance.fr/aides-et-appels-a-projets/transformation-de-vehicules-thermiques-en-vehicules-propres
 instructions: https://www.iledefrance.fr/toutes-les-faq/aides-vehicules-propres-faq
-prefix: l’
+prefix: l'
 type: float
 unit: €
 periodicite: ponctuelle
