Réduit encore la longueur de la description.

--- a/data/benefits/javascript/region-ile-de-france-vehicules-propres.yml
+++ b/data/benefits/javascript/region-ile-de-france-vehicules-propres.yml
@@ -2,8 +2,7 @@ label: aide à la transformation de véhicules thermiques en véhicules propres
 institution: region_ile_de_france
 description:
   La Région subventionne le rétrofit des véhicules thermiques des particuliers.
-  Moins onéreux que l'achat d'une voiture neuve à faibles émissions, le rétrofit consiste
-  à extraire la mécanique d'origine d'un véhicule thermique pour la remplacer
+  Le rétrofit consiste à extraire la mécanique d'origine d'un véhicule thermique pour la remplacer
   par un moteur électrique, une batterie et un boîtier électronique. Tous les véhicules motorisés
   sont éligibles à condition qu'ils appartiennent à leurs bénéficiaires depuis plus de 1 an.
 conditions:
