--- a/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
+++ b/data/benefits/javascript/region-ile-de-france-aide-apprentissage.yml
@@ -1,6 +1,7 @@
 label: aide Régionale à l’Apprentissage (ARA)
 institution: region_ile_de_france
-description: L’Aide régionale à l’apprentissage (ARA) a pour objectif de soutenir
+description:
+  L’Aide régionale à l’apprentissage (ARA) a pour objectif de soutenir
   les apprentis inscrits en 1re année d’apprentissage dans une formation des premiers niveaux (3, 4 et 5).
   Il s’agit d’aider l’apprenti à faire face aux dépenses liées à l’achat de livres,
   d’équipement et de documentation professionnelle, ainsi qu’aux frais de transport,
