--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -292,6 +292,11 @@ jobs:
           name: cypress-${{matrix.test}}
           path: cypress/videos
           retention-days: 10
+      - name: Upload cypress payloads
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-${{matrix.test}}
+          path: cypress/payloads
   check-for-openfisca-requirements-changes:
     name: Check openfisca requirement changes
     runs-on: ubuntu-20.04
