Assure des noms différents pour les nouveaux artefacts

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -289,13 +289,13 @@ jobs:
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: cypress-${{matrix.test}}
+          name: cypress-video-${{matrix.test}}
           path: cypress/videos
           retention-days: 10
       - name: Upload cypress payloads
         uses: actions/upload-artifact@v4
         with:
-          name: cypress-${{matrix.test}}
+          name: cypress-json-${{matrix.test}}
           path: cypress/payloads
   check-for-openfisca-requirements-changes:
     name: Check openfisca requirement changes
