Corrige le test E2E

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -289,8 +289,10 @@ jobs:
         uses: actions/upload-artifact@v3
         if: failure()
         with:
-          name: cypress-video-${{matrix.test}}
-          path: cypress/videos
+          name: cypress-failure-${{matrix.test}}
+          path: |
+            cypress/videos
+            cypress/screenshots
           retention-days: 10
       - name: Upload cypress payloads
         uses: actions/upload-artifact@v4
