Ajoute une étape de CI pour le site d'expérimentations

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -261,6 +261,13 @@ jobs:
         with:
           path: dist-server
           key: ${{ runner.os }}-cache-server-build-${{ github.sha }}
+      - name: Cypress run for experimental website
+        uses: cypress-io/github-action@v5
+        with:
+          browser: chrome
+          config-file: cypress.config.ts
+          start: npm run ci
+          spec: cypress/e2e/experimentations.cy.js
       - name: Start OpenFisca
         shell: bash
         run: |
