--- a/.github/workflows/check-experimental-website.yml
+++ b/.github/workflows/check-experimental-website.yml
@@ -1,9 +1,9 @@
-name: Check experimental
+name: Check experimental website
 on:
   workflow_dispatch:
   schedule:
-    # https://crontab.guru/#30_8_*_*_*
-    - cron: "30 8 * * *"
+    # https://crontab.guru/#0_7_*_*_1-5
+    - cron: "0 7 * * 1-5"
 jobs:
   run:
     runs-on: ubuntu-20.04
@@ -15,8 +15,9 @@ jobs:
       - run: npm ci
       - name: Cypress run for experimental website
         uses: cypress-io/github-action@v5
+        env:
+          CYPRESS_RUN: GH_ACTION
         with:
           browser: chrome
           config-file: cypress.config.ts
-          start: npm run ci
           spec: cypress/e2e/experimentations.cy.js
