Permet la prévisualisation dans Decap avec une iframe

--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -16,7 +16,7 @@ slug:
   encoding: ascii
   clean_accents: true
 
-# local_backend: true
+local_backend: true
 publish_mode: editorial_workflow
 
 root: ../../..
