Ajuste la config de lint-stagged

--- a/package.json
+++ b/package.json
@@ -201,7 +201,7 @@
     "*": [
       "prettier --ignore-unknown --write"
     ],
-    "*.(js|ts|vue)": [
+    "(!contribuer).(js|ts|vue)": [
       "eslint  --max-warnings 0 --fix"
     ]
   },
