--- a/contribuer/package.json
+++ b/contribuer/package.json
@@ -7,7 +7,8 @@
     "lint": "next lint",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "prettier": "prettier"
   },
   "author": "Thomas Guillet",
   "license": "AGPL-3.0",
@@ -16,6 +17,7 @@
     "eslint-config-next": "13.1.2",
     "netlify-identity-widget": "^1.9.2",
     "next": "13.5.4",
+    "prettier": "^3.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
