--- a/package.json
+++ b/package.json
@@ -205,7 +205,7 @@
       "eslint  --max-warnings 0 --fix"
     ],
     "contribuer": [
-      "eslint  --max-warnings 0 --fix"
+      "npm run yolo"
     ]
   },
   "engines": {
