Ajoute prettier au dossier contribuer v2

--- a/package.json
+++ b/package.json
@@ -204,7 +204,7 @@
     "(!contribuer).(js|ts|vue)": [
       "eslint  --max-warnings 0 --fix"
     ],
-    "contribuer": [
+    "(*contribuer*).js": [
       "npm run yolo"
     ]
   },
