--- a/contribuer/package.json
+++ b/contribuer/package.json
@@ -7,6 +7,7 @@
     "lint": "next lint",
     "build": "next build",
     "start": "next start",
+    "export": "npm run build && next export",
     "prettier": "prettier --write"
   },
   "author": "Thomas Guillet",
