--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "husky": "husky install",
     "install-openfisca": "pip install --upgrade -r openfisca/requirements.txt",
     "lint:fix": "eslint backend data iframes lib src --ext ts,js,vue --fix",
+    "lint-staged:contribuer": "cd contribuer && npm run lint-staged --",
     "openfisca": "OPENFISCA_WORKERS=1 gunicorn openfisca.api --config openfisca/config.py",
     "predb": "mkdir -p db",
     "prestart": "npm run build && npm run stats",
     "prettier:check": "prettier --check .",
     "prettier:fix": "prettier --write .",
-    "prettier:contribuer": "cd contribuer && npm run prettier",
     "start": "NODE_ENV=production node ./dist-server/backend/server.js",
     "stats": "node --loader ts-node/esm ./backend/lib/stats/index.ts",
     "test": "NODE_OPTIONS=--experimental-vm-modules NODE_PATH=. jest --testTimeout=20000",
@@ -206,7 +206,7 @@
       "eslint  --max-warnings 0 --fix"
     ],
     "*(contribuer)*.js": [
-      "npm run prettier:contribuer -- "
+      "npm run lint-staged:contribuer --"
     ]
   },
   "engines": {
