--- a/contribuer/package.json
+++ b/contribuer/package.json
@@ -9,7 +9,7 @@
     "start": "next start",
     "export": "npm run build && next export",
     "prettier": "prettier --write .",
-    "lint-staged": "prettier --write"
+    "lint-staged": "prettier --verbose --write"
   },
   "author": "Thomas Guillet",
   "license": "AGPL-3.0",
