--- a/data/benefits/openfisca/ile_de_france_aide_achat_voiture_electrique.yml
+++ b/data/benefits/openfisca/ile_de_france_aide_achat_voiture_electrique.yml
@@ -12,16 +12,12 @@ conditions:
   - Vérifier que le modèle de voiture électrique que vous souhaitez acheter figure <a target="_blank" rel="noopener" title="voitures éligibles - Nouvelle fenêtre"
     href="https://www.iledefrance.fr/toutes-les-faq/aides-vehicules-propres-faq">dans la liste établie par la région</a>, à la rubrique Pour tous, quelles sont les voitures élctriqus éligibles exactement ?.
   - Déposer votre demande sur mesdemarches.iledefrance.fr au plus tard dans les 3 mois suivant l'achat du véhicule propre.
-conditions_generales:
-  - type: regions
-    values:
-      - "11"
-profils: []
 link: https://www.iledefrance.fr/aides-et-appels-a-projets/acquisition-de-vehicules-propres-par-les-particuliers
 instructions: https://www.iledefrance.fr/toutes-les-faq/aides-vehicules-propres-faq
 prefix: l’
 type: float
 unit: €
-periodicite: ponctuelle
+entity: individus
+openfiscaPeriod: thisMonth
 legend: maximum
-montant: 9000
+periodicite: ponctuelle
