--- a/contribuer/public/admin/config.yml
+++ b/contribuer/public/admin/config.yml
@@ -2,6 +2,7 @@ locale: fr
 backend:
   name: git-gateway-large
   branch: main
+  repo: https://github.com/betagouv/aides-jeunes.git
   commit_messages:
     create: Crée {{slug}}
     update: Met à jour {{slug}}
