Déplace le fichier de test e2e-extra dans un sous dossier de e2e

--- a/.github/workflows/check-experimental-website.yml
+++ b/.github/workflows/check-experimental-website.yml
@@ -32,4 +32,4 @@ jobs:
           CYPRESS_RUN: GH_ACTION
         with:
           browser: chrome
-          spec: cypress/e2e-extra/*
+          spec: cypress/e2e/extra/*
