--- a/data/institutions/ca_pays_de_grasse.yml
+++ b/data/institutions/ca_pays_de_grasse.yml
@@ -1,4 +1,4 @@
-name: Communauté d'agglomération du Pays de Grasse
+name: Communauté dʼagglomération du Pays de Grasse
 imgSrc: img/institutions/logo_ca_pays_de_grasse.png
 prefix: de la
 type: epci
