--- a/data/institutions/ca_vitre_communaute.yml
+++ b/data/institutions/ca_vitre_communaute.yml
@@ -1,4 +1,4 @@
-name: Communauté d'agglomération de Vitré Communauté
+name: Communauté dʼagglomération de Vitré Communauté
 imgSrc: img/institutions/logo_ca_vitre_communaute.png
 prefix: de la
 type: epci
