--- a/data/institutions/ca_esterel_cote_d_azur_agglomeration.yml
+++ b/data/institutions/ca_esterel_cote_d_azur_agglomeration.yml
@@ -1,4 +1,4 @@
-name: Communauté d'agglomération Estérel Côte d'Azur
+name: Communauté dʼagglomération Estérel Côte dʼAzur
 imgSrc: img/institutions/logo_ca_esterel_cote_d_azur_agglomeration.png
 prefix: de la
 type: epci
