--- a/data/institutions/ca_gard_rhodanien.yml
+++ b/data/institutions/ca_gard_rhodanien.yml
@@ -1,4 +1,4 @@
-name: Communauté dʼAgglomération du Gard Rhodanien
+name: Communauté dʼagglomération du Gard Rhodanien
 imgSrc: img/institutions/logo_ca_gard_rhodanien.png
 prefix: de la
 type: epci
