--- a/data/institutions/ca_pays_ajaccien.yml
+++ b/data/institutions/ca_pays_ajaccien.yml
@@ -1,4 +1,4 @@
-name: Communauté dʼAgglomération du Pays Ajaccien
+name: Communauté dʼagglomération du Pays Ajaccien
 imgSrc: img/institutions/logo_ca_pays_ajaccien.png
 prefix: de la
 type: epci
